syntax = "proto3";

// The package name in the proto file. The generated JavaScript code has a corresponding JavaScript package name.
package vector_analysis;

// The service definition.
service VectorService {
  // Sends a VectorRequest and gets a VectorResponse
  rpc Fit (FitRequest) returns (Empty) {}
  rpc Transform (TransformRequest) returns (VectorResponse) {}
  rpc Load (Empty) returns (Empty) {}
}

message FitRequest {
  repeated FloatArray vectors = 1;
}

message TransformRequest {
  string model_name = 1;
  repeated FloatArray vectors = 2;
}

// The response message containing the server's vector.
message VectorResponse {
  repeated FloatArray vectors = 1;
}

message Empty {

}

message FloatArray {
  repeated float values = 1;
}